<resources>
    <string name="app_name">EpiQuick</string>

    <string name="title">Reportable Diseases</string>
    <string name="action_settings">Settings</string>
    <string name="salmonella">Salmonella</string>
    <string name="lyme">Lyme Disease</string>
    <string name="cpox">Chicken pox</string>
    <string name="shig">Shigella</string>
    <string name="gia">Giardia</string>
    <string name="button">Learn More!</string>
    <string name="home">Home</string>
</resources>
