<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:scaleType="fitCenter"
            android:src="@drawable/intro" />

        <TextView
            android:id="@+id/text"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/head_image"
            android:layout_marginBottom="16dp"
            />

        <RadioGroup
            android:id="@+id/my_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/salm_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salmonella"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/lyme_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lyme"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/pox_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpox"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/shig_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shig"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/gia_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gia"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_below="@id/my_group"
            android:layout_centerHorizontal="true"
            android:onClick="submit"
            style="@style/button"/>

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_below="@id/submit"
            android:layout_centerHorizontal="true"
            android:onClick="home"
            style="@style/button"/>

    </RelativeLayout>
</ScrollView>
